--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,59 +1,89 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Fira+Code:wght@300..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Karla:ital,wght@0,200..800;1,200..800&family=Parkinsans:wght@300..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Bebas+Neue&family=Fira+Code:wght@300..700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Karla:ital,wght@0,200..800;1,200..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Parkinsans:wght@300..800&family=Poiret+One&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Squada+One&display=swap');
 
+:root{
+    color-scheme: dark;
+}
 * {
-    font-family: "Karla", sans-serif;
-    font-weight: 700;
     margin: 0;
-    border: 0;
     padding: 0;
+    font-family: "Poiret One", sans-serif;
 }
 
-a {
-    text-decoration: none;
-    color: #000000;
-    transition: transform ease-in-out 1s;
-
-    &:visited {
-        text-decoration: none;
-    }
-
-    &:hover{
-        transform: translateY(-10px)
-    }
-}
-
-header {
-    width: 100vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(0, 0, 0);
-}
-
-body{
+body {
     min-height: 100vh;
-    max-width: 100vw;
 }
 
-#logo {
-    height: 3rem;
-    margin: 1rem;
-    transition: transform ease-in-out 1s;
-
-    &:hover {
-        cursor: pointer;
-        transform: translateY(-10px)
-    }
-}
-
-#paginas {
-    margin: 1rem;
-    min-width: 290px;
+header{
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 1em;
 }
 
-#paginas a {
+#header-1{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#header-2{
+    margin-top: 3em;
+}
+
+#header-2 h1,p{
+    text-align: center;
+    margin: 1em 0;
+}
+
+#links-header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#logo{
+    max-height: 3em;
+    transition: transform ease-in 0.7s;
+
+    &:hover{
+        transform: translateY(-10px);
+        cursor: pointer;
+    }
+}
+
+.texto-header{
+    text-decoration: none;
     color: #ffffff;
+    margin: 0 1em;
+    font-size: 1.1em;
+    transition: transform ease-in 0.7s;
+
+    &:hover{
+        transform: translateY(-10px);
+    }
+}
+
+.social-header{
+    height: 2em;
+}
+
+main{
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+#filmes{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1.5em 0;
+}
+
+.img-filmes{
+    max-width: 50%;
 }
