--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,32 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/img/logo(alternativa).png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Filmes S+</title>
+    <title>Samuca Cine</title>
 </head>
 
 <body>
     <header>
-        <img id="logo" src="/img/logo(alternativa).png" alt="">
-        <div id="paginas">
-            <a href="/animacao">Animação</a>
-            <a href="/popular">Populares</a>
-            <a href="/lancamento">Lançamentos</a>
+        <div id="header-1">
+            <img id="logo" src="/img/logo.png" alt="">
+
+            <div id="links-header">
+                <a class="texto-header" href="/sobre">Sobre</a>
+                <a class="texto-header" href="/animacao">Filmes</a>
+                <a class="texto-header" href="/popular">Séries</a>
+                <a class="texto-header" href="/popular">Populares</a>
+                <a class="texto-header" href="/popular">Lançamentos</a>
+            </div>
+
+            <div id="social-header">
+                <img class="social-header" src="/img/social/instagram.png" alt="Instagram">
+                <img class="social-header" src="/img/social/linkedin.png" alt="Linkedin">
+                <img class="social-header" src="/img/social/github.png" alt="Github">
+                <img class="social-header" src="" alt="">
+            </div>
+        </div>
+
+        <div id="header-2">
+            <h1>Conheça meu catálogo de Filmes e Séries</h1>
+            <p>Arraste o cursor sobre o poster para mais informações. </p>
         </div>
     </header>
     <main>
-        <% for(let i=1;i < filmes.length; i++) {%>
-            <div class="filmes">
-                <img class="img-filmes" src="https://image.tmdb.org/t/p/w500/<%= filmes[i].poster_path%>" alt="">
-                <p>
-                    <%= filmes[i].title%>
-                </p>
-            </div>
+        <% for(let i=0;i < filmes.length; i++) { %>
+
+            <% for(let j=0; j < filmes[i].length; j++) { %>
+
+                <div id="filmes">
+                    <img class="img-filmes"
+                        src="https://image.tmdb.org/t/p/w500/<%= filmes[i].results[j].poster_path %>"
+                        alt="<%= filmes[i].results[j].title %>">
+                </div>
+                
             <% } %>
+
+        <% } %>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 
