--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,22 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Bebas+Neue&family=Fira+Code:wght@300..700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Karla:ital,wght@0,200..800;1,200..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Parkinsans:wght@300..800&family=Poiret+One&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Squada+One&display=swap');
 
-:root{
+:root {
     color-scheme: dark;
 }
+
 * {
     margin: 0;
     padding: 0;
     font-family: "Poiret One", sans-serif;
+    font-weight: 600;
 }
 
 body {
     min-height: 100vh;
 }
 
-header{
+header {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -23,67 +25,227 @@ header{
     padding: 1em;
 }
 
-#header-1{
+#header-1 {
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
 }
 
-#header-2{
+#header-2 {
     margin-top: 3em;
 }
 
-#header-2 h1,p{
+#header-2 h1,
+p {
     text-align: center;
     margin: 1em 0;
 }
 
-#links-header{
+.header-item {
+    margin: 1em;
+}
+
+#links-header {
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
 }
 
-#logo{
+#itens-selecionar {
+    position: relative;
+    display: none;
+}
+
+#seleciona-tipo {
+    display: none;
+}
+
+.texto-selecionar {
+    position: absolute;
+    display: flex;
+    text-decoration: none;
+    color: #ffffff;
+}
+
+#item1selecionar {
+    margin: 2em 0;
+    color: #000000;
+    background-color: #ffffff;
+    padding: 2em;
+    width: 100px;
+    transition: transform ease-in 0.7s;
+
+    &:hover {
+        transform: scale(1.1);
+        color: #000000;
+        background-color: #ffffff;
+    }
+}
+
+#item2selecionar {
+    margin: 6em 0;
+    color: #000000;
+    background-color: #ffffff;
+    padding: 2em;
+    width: 100px;
+    transition: transform ease-in 0.7s;
+
+    &:hover {
+        transform: scale(1.1);
+        color: #000000;
+        background-color: #ffffff;
+    }
+}
+
+#item3selecionar {
+    margin: 10em 0;
+    color: #000000;
+    background-color: #ffffff;
+    padding: 2em;
+    width: 100px;
+    transition: transform ease-in 0.7s;
+
+    &:hover {
+        transform: scale(1.1);
+        color: #000000;
+        background-color: #ffffff;
+    }
+}
+
+#item4selecionar {
+    margin: 14em 0;
+    color: #000000;
+    background-color: #ffffff;
+    padding: 2em;
+    width: 100px;
+    transition: transform ease-in 0.7s;
+
+    &:hover {
+        transform: scale(1.1);
+        color: #000000;
+    }
+}
+
+#item5selecionar {
+    margin: 18em 0;
+    color: #000000;
+    background-color: #ffffff;
+    padding: 2em;
+    width: 100px;
+    transition: transform ease-in 0.7s;
+
+    &:hover {
+        transform: scale(1.1);
+        color: #000000;
+    }
+}
+
+#item6selecionar {
+    margin: 22em 0;
+    color: #000000;
+    background-color: #ffffff;
+    padding: 2em;
+    width: 100px;
+    transition: transform ease-in 0.7s;
+
+    &:hover {
+        transform: scale(1.1);
+        color: #000000;
+    }
+}
+
+#logo {
     max-height: 3em;
     transition: transform ease-in 0.7s;
 
-    &:hover{
+    &:hover {
         transform: translateY(-10px);
         cursor: pointer;
     }
 }
 
-.texto-header{
+.texto-header {
     text-decoration: none;
     color: #ffffff;
-    margin: 0 1em;
+    margin: 1em;
     font-size: 1.1em;
+    padding: 1em;
     transition: transform ease-in 0.7s;
 
-    &:hover{
+    &:hover {
+        background-color: #ffffff;
+        color: #000000;
         transform: translateY(-10px);
     }
 }
 
-.social-header{
-    height: 2em;
+.social-img {
+    height: 1.2em;
+    margin: 0 0.2em;
+    transition: transform ease-in 0.7s;
+
+    &:hover {
+        transform: translateY(-10px);
+    }
 }
 
-main{
+.social-header {
+    margin: 0 0.2em;
+}
+
+main {
     display: grid;
     grid-template-columns: auto auto auto;
 }
 
-#filmes{
+#filmes {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     margin: 1.5em 0;
+    transition: transform ease-in 0.7s;
+
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
-.img-filmes{
+.img-filmes {
     max-width: 50%;
+    border-radius: 0.5em;
+}
+
+.nome-filme {
+    font-size: 0.8em;
+}
+
+@media screen and (max-width: 558px) {
+
+    .img-filmes {
+        max-width: 70%;
+        border-radius: 0.5em;
+    }
+
+    #links-header {
+        display: none;
+    }
+
+    .social-header {
+        display: none;
+    }
+
+    #seleciona-tipo {
+        display: inline;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    #itens-selecionar {
+        display: none;
+    }
 }
