--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,22 +16,23 @@
                 <i id="menu" class="fa-solid fa-bars fa-2xl" style="color: #ffffff;"></i>
                 <div id="itens-selecionar">
                     <a id="item1selecionar" class="texto-selecionar" href="/sobre">Sobre</a>
-                    <a id="item2selecionar" class="texto-selecionar" href="/popular">+18</a>
-                    <a id="item3selecionar" class="texto-selecionar" href="/animacao">Filmes</a>
-                    <a id="item4selecionar" class="texto-selecionar" href="/popular">Séries</a>
-                    <a id="item5selecionar" class="texto-selecionar" href="/popular">Populares</a>
-                    <a id="item6selecionar" class="texto-selecionar" href="/popular">Lançamentos</a>
+                    <a id="item2selecionar" class="texto-selecionar" href="/18">+18</a>
+                    <a id="item3selecionar" class="texto-selecionar" href="/filmes">Filmes</a>
+                    <a id="item4selecionar" class="texto-selecionar" href="/series">Séries</a>
+                    <a id="item5selecionar" class="texto-selecionar" href="/populares">Populares</a>
+                    <a id="item6selecionar" class="texto-selecionar" href="/lancamento">Lançamentos</a>
                 </div>
             </div>
+
             <img class="header-item" id="logo" src="/img/logo.png" alt="">
 
             <div class="header-item" id="links-header">
                 <a class="texto-header" href="/sobre">Sobre</a>
-                <a class="texto-header" href="/popular">+ 18</a>
-                <a class="texto-header" href="/animacao">Filmes</a>
-                <a class="texto-header" href="/popular">Séries</a>
-                <a class="texto-header" href="/popular">Populares</a>
-                <a class="texto-header" href="/popular">Em Cartaz</a>
+                <a class="texto-header" href="/18">+ 18</a>
+                <a class="texto-header" href="/filmes">Filmes</a>
+                <a class="texto-header" href="/series">Séries</a>
+                <a class="texto-header" href="/populares">Populares</a>
+                <a class="texto-header" href="/lancamento">Lamçamentos</a>
             </div>
 
             <div class="header-item" id="social-header">
@@ -67,7 +68,64 @@
     </main>
 
     <footer>
+        <div id="footer2">
 
+
+            <h1 class="footer-titulo">Midias Sociais</h1>
+            <div id="footer2-icons">
+                <a target="_blank" rel=”noopener” href="https://github.com/devsamuca"><img class="footer2-icon"
+                        src="img/social/github.png" alt="Github"></a>
+                <a target="_blank" rel=”noopener” href="https://www.instagram.com/samuca.io"><img class="footer2-icon"
+                        src="img/social/instagram.png" alt="Instagram"></a>
+                <a target="_blank" rel=”noopener” href="https://www.linkedin.com/in/devsamuel/"><img
+                        class="footer2-icon" src="img/social/linkedin.png" alt="Linkedin"></a>
+                <a target="_blank" rel=”noopener” href="https://www.youtube.com/@iosamuca"><img class="footer2-icon"
+                        src="img/social/youtube.png" alt="Youtube"></a>
+                <a target="_blank" rel=”noopener” href="https://open.spotify.com/user/31vw57cbppfuqfi2mgy3fjgr53eu"><img
+                        class="footer2-icon" src="img/social/spotify.png" alt="Spotify"></a>
+                <a target="_blank" rel=”noopener” href="https://x.com/samucaioo"><img class="footer2-icon"
+                        src="img/social/x.png" alt="X"></a>
+                <a target="_blank" rel=”noopener” href="https://discord.gg/jETY8m2n6g"><img class="footer2-icon"
+                        src="img/social/discordi.png" alt="Discord"></a>
+            </div>
+
+        </div>
+        <div id="footer1">
+            <div class="footer1-element" id="footer-linguagem">
+                <h1 class="footer-titulo">Tecnologias</h1>
+                <div class="footer1-itens">
+                    <a class="footer1-link" href="https://www.w3schools.com/nodejs/default.asp">Node</a>
+                    <a class="footer1-link" href="https://www.w3schools.com/html/default.asp">Html</a>
+                    <a class="footer1-link" href="https://www.w3schools.com/css/default.asp">Css</a>
+                    <a class="footer1-link" href="https://www.w3schools.com/js/default.asp">Java Script</a>
+                </div>
+            </div>
+
+            <div class="footer1-element" id="footer-ferramentas">
+                <h1 class="footer-titulo">Ferramentas</h1>
+                <div class="footer1-itens">
+                    <a class="footer1-link" href="https://vscode.dev/?vscode-lang=pt-br">VsCode</a>
+                    <a class="footer1-link" href="https://git-scm.com/">Git</a>
+                    <a class="footer1-link"
+                        href="https://www.flaticon.com/br/?k=1719151636320&log-in=google">Flaticon</a>
+                    <a class="footer1-link" href="https://fontawesome.com/">Fontawesome</a>
+                </div>
+            </div>
+
+            <div class="footer1-element" id="footer-api">
+                <h1 class="footer-titulo">Api</h1>
+                <div class="footer1-itens">
+                    <a class="footer1-link" href="https://developer.themoviedb.org/reference/discover-movie">The Movie
+                        DataBase</a>
+                    <p class="opacity">.</p>
+                    <p class="opacity">.</p>
+                    <p class="opacity">.</p>
+                </div>
+            </div>
+        </div>
+        <div id="footer3">
+            <h1 id="copyright" class="footer-titulo">©Copyright 2024. Desenvolvido por Samuel Souza.</h1>
+        </div>
     </footer>
     <script src="https://kit.fontawesome.com/f59b0f7f02.js" crossorigin="anonymous"></script>
     <script src="js/js.js"></script>
