--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
         <div id="footer2">
 
 
-            <h1 class="footer-titulo">Midias Sociais</h1>
+            <h1 id="titulo-sociais" class="footer-titulo">Midias Sociais</h1>
             <div id="footer2-icons">
                 <a target="_blank" rel=”noopener” href="https://github.com/devsamuca"><img class="footer2-icon"
                         src="img/social/github.png" alt="Github"></a>
@@ -124,7 +124,7 @@
             </div>
         </div>
         <div id="footer3">
-            <h1 id="copyright" class="footer-titulo">©Copyright 2024. Desenvolvido por Samuel Souza.</h1>
+            <p id="copyright" class="footer-titulo">©Copyright 2024. Desenvolvido por Samuel Souza.</p>
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/f59b0f7f02.js" crossorigin="anonymous"></script>
