--- a/views/info.ejs
+++ b/views/info.ejs
@@ -16,10 +16,10 @@
                 <i id="menu" class="fa-solid fa-bars fa-2xl" style="color: #ffffff;"></i>
                 <div id="itens-selecionar">
                     <a id="item1selecionar" class="texto-selecionar" href="/sobre">Sobre</a>
-                    <a id="item3selecionar" class="texto-selecionar" href="/filmes">Filmes</a>
-                    <a id="item4selecionar" class="texto-selecionar" href="/series">Séries</a>
-                    <a id="item5selecionar" class="texto-selecionar" href="/populares">Populares</a>
-                    <a id="item6selecionar" class="texto-selecionar" href="/lancamentos">Lançamentos</a>
+                    <a id="item2selecionar" class="texto-selecionar" href="/filmes">Filmes</a>
+                    <a id="item3selecionar" class="texto-selecionar" href="/series">Séries</a>
+                    <a id="item4selecionar" class="texto-selecionar" href="/populares">Populares</a>
+                    <a id="item5selecionar" class="texto-selecionar" href="/lancamentos">Lançamentos</a>
                 </div>
             </div>
 
@@ -45,30 +45,14 @@
         </div>
 
         <div id="header-2">
-            <h1>Lançamentos</h1>
+            <h1>Filmes e Séries</h1>
             <h1>Conheça meu catálogo de Filmes e Séries</h1>
             <p>Arraste o cursor sobre o poster para mais informações. </p>
         </div>
     </header>
-
     <main>
 
-        <% for(let i=0; i < filmesLancamentos.length; i++) { %>
-
-            <div class="filmes">
-                <a href="/info/<%= filmes[i].id %>">
-                <img class="img-filmes" src="https://image.tmdb.org/t/p/w500/<%= filmesLancamentos[i].poster_path %>"
-                    alt="<%= filmesLancamentos[i].name %> <%= filmesLancamentos[i].title %>">
-                </a>
-                <p class="nome-filme">
-                    <%= filmesLancamentos[i].name %>
-                        <%= filmesLancamentos[i].title %>
-                </p>
-            </div>
-            <% } %>
-            
     </main>
-
     <footer>
         <div id="footer2">
 
